Update styles.css and index.html
This commit update both files to match the desired design
of the odin landing webpage. Content remains empty, and
will be updated later.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     </head>
     <body>
         <div class="header">
+         <div class="header-container">
             <div class="sub-header-small">
-                <a href="#" >Header Logo</a>
+                <a class="logo" href="#" >Header Logo</a>
                 <ul>
                     <li><a href="#">header link one</a></li>
                     <li><a href="#">header link two</a></li>
@@ -19,7 +20,7 @@
             </div>
             <div class="sub-header-big">
                 <div class="header-big-left">
-                    <h1>this website is awesome</h1>
+                    <h1>This website is awesome</h1>
                     <p>
                         this website has Some
                         subtext that goes here under
@@ -35,6 +36,7 @@
                     </p>
                 </div>
             </div>
+         </div>   
         </div>
         <div class="main-body">
             <div class="main-body-panel">
@@ -88,11 +90,11 @@
                         <h1>Call to action! It's time!</h1>
                         <p>Sign up for our product by clicking that button right over there!</p>
                     </div>
-                    <button>Sign Up!</button>
+                    <button>Sign Up</button>
                 </div>
             </div>
         </div>
-        <div class="footer">Copyright The Odin Project
+        <div class="footer">Copyright The Odin Project 2021
         </div>
     </body>
 </html>
